# fastapi_demo2

./: docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
backend/: Dockerfile  alembic.ini
backend/app/api/: server.py
backend/app/api/dependencies/: auth.py  database.py
backend/app/api/routes/: __init__.py  hedgehogs.py  profiles.py  users.py
backend/app/core/: config.py
backend/app/db/: tasks.py
backend/app/db/migrations/: env.py  script.py.mako
backend/app/db/migrations/versions/: 60dd74ca4fff_create_first_tables.py
backend/app/db/repositories/: hedgehogs.py  profiles.py  users.py
backend/app/models/: core.py  hedgehog.py  token.py  user.py
backend/app/services/: authentication.py
backend/tests/: conftest.py  test_hedgehogs.py  test_profiles.py  test_users.py  utility.py
