[tool.poetry]
name = "fastapi_demo2"
version = "0.1.0"
description = "sample fastAPI app"
authors = ["jackkitte <kakeru.tamashiro@revcomm.co.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
