[tool.poetry]
name = "fastapi_demo2"
version = "0.1.0"
description = "sample fastAPI app"
authors = ["jackkitte <kakeru.tamashiro@revcomm.co.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
SQLAlchemy = "^1.4.27"
alembic = "^1.7.5"
psycopg2 = "^2.9.2"
databases = {extras = ["postgresql"], version = "^0.5.3"}

[tool.poetry.dev-dependencies]
black = "^21.12b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
