[tool.poetry]
name = "fastapi_demo2"
version = "0.1.0"
description = "sample fastAPI app"
authors = ["jackkitte <kakeru.tamashiro@revcomm.co.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
SQLAlchemy = "^1.4.27"
alembic = "^1.7.5"
psycopg2 = "^2.9.2"
databases = {extras = ["postgresql"], version = "^0.5.3"}
python-dateutil = "^2.8.2"
pydantic = {extras = ["email"], version = "^1.8.2"}
PyJWT = "^2.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]
black = "^21.12b0"
mypy = "^0.910"
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
httpx = "^0.21.1"
asgi-lifespan = "^1.0.1"
docker = "^5.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
